crates/test-ui/ui/implement_protocol_missing_super.stderr
error[E0277]: the trait bound `CustomObject: NSObjectProtocol` is not satisfied
 --> ui/implement_protocol_missing_super.rs
  |
  |     unsafe impl NSURLSessionDelegate for CustomObject {}
  |                                          ^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `NSObjectProtocol` is not implemented for `CustomObject`
 --> ui/implement_protocol_missing_super.rs
  |
  | / define_class!(
  | |     #[unsafe(super(NSObject))]
  | |     #[thread_kind = MainThreadOnly]
  | |     struct CustomObject;
  | |
  | |     unsafe impl NSURLSessionDelegate for CustomObject {}
  | | );
  | |_^
  = help: the following other types implement trait `NSObjectProtocol`:
            NSArray<ObjectType>
            NSConstantString
            NSCountedSet<ObjectType>
            NSDictionary<KeyType, ObjectType>
            NSEnumerator<ObjectType>
            NSError
            NSMutableArray<ObjectType>
            NSMutableDictionary<KeyType, ObjectType>
          and $N others
note: required by a bound in `NSURLSessionDelegate`
 --> $WORKSPACE/framework-crates/objc2-foundation/src/generated/NSURLSession.rs
  |
  | / extern_protocol!(
  | |     /// [Apple's documentation](https://developer.apple.com/documentation/foundation/nsurlsessiondelegate?language=objc)
  | |     pub unsafe trait NSURLSessionDelegate: NSObjectProtocol + Send + Sync {
  | |                      -------------------- required by a bound in this trait
  | |         #[cfg(feature = "NSError")]
... |
  | | );
  | |_^ required by this bound in `NSURLSessionDelegate`
  = note: this error originates in the macro `$crate::__define_class_inner` which comes from the expansion of the macro `extern_protocol` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `ThreadKindAutoTraits<(dyn MainThreadOnly + 'static)>` cannot be shared between threads safely
 --> ui/implement_protocol_missing_super.rs
  |
  |     unsafe impl NSURLSessionDelegate for CustomObject {}
  |                                          ^^^^^^^^^^^^ `ThreadKindAutoTraits<(dyn MainThreadOnly + 'static)>` cannot be shared between threads safely
  |
  = help: within `CustomObject`, the trait `Sync` is not implemented for `ThreadKindAutoTraits<(dyn MainThreadOnly + 'static)>`
  = help: the trait `Sync` is implemented for `ThreadKindAutoTraits<dyn AllocAnyThread>`
  = note: required because it appears within the type `((), ThreadKindAutoTraits<(dyn MainThreadOnly + 'static)>)`
note: required because it appears within the type `PhantomData<((), ThreadKindAutoTraits<(dyn MainThreadOnly + 'static)>)>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `CustomObject`
 --> ui/implement_protocol_missing_super.rs
  |
  |     struct CustomObject;
  |            ^^^^^^^^^^^^
note: required by a bound in `NSURLSessionDelegate`
 --> $WORKSPACE/framework-crates/objc2-foundation/src/generated/NSURLSession.rs
  |
  | / extern_protocol!(
  | |     /// [Apple's documentation](https://developer.apple.com/documentation/foundation/nsurlsessiondelegate?language=objc)
  | |     pub unsafe trait NSURLSessionDelegate: NSObjectProtocol + Send + Sync {
  | |                      -------------------- required by a bound in this trait
  | |         #[cfg(feature = "NSError")]
... |
  | | );
  | |_^ required by this bound in `NSURLSessionDelegate`
  = note: this error originates in the macro `extern_protocol` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `ThreadKindAutoTraits<(dyn MainThreadOnly + 'static)>` cannot be sent between threads safely
 --> ui/implement_protocol_missing_super.rs
  |
  |     unsafe impl NSURLSessionDelegate for CustomObject {}
  |                                          ^^^^^^^^^^^^ `ThreadKindAutoTraits<(dyn MainThreadOnly + 'static)>` cannot be sent between threads safely
  |
  = help: within `CustomObject`, the trait `Send` is not implemented for `ThreadKindAutoTraits<(dyn MainThreadOnly + 'static)>`
  = help: the trait `Send` is implemented for `ThreadKindAutoTraits<dyn AllocAnyThread>`
  = note: required because it appears within the type `((), ThreadKindAutoTraits<(dyn MainThreadOnly + 'static)>)`
note: required because it appears within the type `PhantomData<((), ThreadKindAutoTraits<(dyn MainThreadOnly + 'static)>)>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `CustomObject`
 --> ui/implement_protocol_missing_super.rs
  |
  |     struct CustomObject;
  |            ^^^^^^^^^^^^
note: required by a bound in `NSURLSessionDelegate`
 --> $WORKSPACE/framework-crates/objc2-foundation/src/generated/NSURLSession.rs
  |
  | / extern_protocol!(
  | |     /// [Apple's documentation](https://developer.apple.com/documentation/foundation/nsurlsessiondelegate?language=objc)
  | |     pub unsafe trait NSURLSessionDelegate: NSObjectProtocol + Send + Sync {
  | |                      -------------------- required by a bound in this trait
  | |         #[cfg(feature = "NSError")]
... |
  | | );
  | |_^ required by this bound in `NSURLSessionDelegate`
  = note: this error originates in the macro `extern_protocol` (in Nightly builds, run with -Z macro-backtrace for more info)
